--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,14 @@ jobs:
           java-version: 17
       - name: Unit & Integration Tests
         run: mvn -B verify
+      - name: Sonar
+        if: success() # always() failure() success()
+        run: >
+            mvn -B verify -DskipTests sonar:sonar
+            -Dsonar.projectKey=iwvg-munoz-jorge_munoz-jorge
+            -Dsonar.organization=iwvg-munoz-jorge
+            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.login=$SONAR_TOKEN
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
